--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<p>Hello, I'm <strong>Tiago Belintani</strong>, a postdoctoral researcher at <strong>UNESP</strong>. I study <strong>evolution</strong>, <strong>phylogenomics</strong>, and <strong>systematics</strong> of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas). My background is in <strong>Animal Biology</strong>, with strong emphasis on <strong>bioinformatics</strong>, <strong>evolutionary biology</strong>, and <strong>morphometric analysis</strong>.</p>
+<p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
+I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
+My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
 
 <div class="section">
   <h2>🧬 Work</h2>
@@ -72,17 +74,17 @@ title: Tiago Belintani
 <div class="section">
   <h2>🎓 Education</h2>
   <ul>
-    <li><strong>Universidade Estadual de Campinas</strong> – IB/Unicamp</li>
-    <li><strong>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</strong></li>
-    <li><strong>University of Idaho</strong> – UIDAHO</li>
-    <li><strong>São Paulo State University (Unesp)</strong> – Campus de Rio Claro</li>
+    <li>Universidade Estadual de Campinas – IB/Unicamp</li>
+    <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
+    <li>University of Idaho – UIDAHO</li>
+    <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
   </ul>
 </div>
 
 <div class="section">
   <h2>📬 Contact Me</h2>
-  <p><strong>Email:</strong> <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-  <p><strong>GitHub:</strong> <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
+  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
 </div>
 
 <div class="section">
@@ -93,5 +95,4 @@ title: Tiago Belintani
     <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
   </ul>
 </div>
-
 
