--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'Fira Code', monospace;
     color: #222;
-    background: url('assets/images/background.jpg') no-repeat center center fixed;
+    background: url('assets/images/background.png') no-repeat center center fixed;
     background-size: cover;
     max-width: 900px;
     margin: 0 auto;
@@ -120,7 +120,7 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
 </div>
 
 <div class="image-gallery">
-  <img src="assets/images/img1.jpg" alt="Extra Image 1">
-  <img src="assets/images/img2.jpg" alt="Extra Image 2">
+  <img src="assets/images/img1.tiff" alt="Extra Image 1">
+  <img src="assets/images/img2.tiff" alt="Extra Image 2">
 </div>
 
