--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-----
+---
 layout: default
 title: Tiago Belintani
 ---
@@ -22,18 +22,18 @@ title: Tiago Belintani
   }
 
   h1 {
-    font-size: 4em;
+    font-size: 4.2em;
     margin-bottom: 0;
   }
 
   h3 {
-    font-size: 2em;
+    font-size: 2.2em;
     font-weight: 400;
     margin-top: 0;
   }
 
   .section {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
@@ -64,6 +64,7 @@ title: Tiago Belintani
   .image-gallery {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
     margin-top: 40px;
   }
@@ -76,7 +77,7 @@ title: Tiago Belintani
 </style>
 
 <div class="photo">
-  <img src="assets/images/profile.jpg" alt="Tiago Belintani">
+  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
 
 <h1>Tiago Belintani</h1>
@@ -120,7 +121,8 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
 </div>
 
 <div class="image-gallery">
-  <img src="assets/images/img1.tiff" alt="Extra Image 1">
-  <img src="assets/images/img2.tiff" alt="Extra Image 2">
+  <img src="assets/images/extra1.jpg" alt="DNA theme">
+  <img src="assets/images/extra2.jpg" alt="Tarantula and Kissing Bug">
 </div>
+
 
