--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
 </div>
 
 <div class="image-gallery">
-  <img src="assets/images/imagem1.TIF" alt="DNA theme">
-  <img src="assets/images/imagem2.TIF" alt="Tarantula and Kissing Bug">
+  <img src="assets/images/imagem1.jpg" alt="DNA theme">
+  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
-
 
