--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@ title: Tiago Belintani
   }
 
   h1 {
-    font-size: 4.2em;
+    font-size: 4.4em;
     margin-bottom: 0;
   }
 
   h3 {
-    font-size: 2.2em;
+    font-size: 2.4em;
     font-weight: 400;
     margin-top: 0;
+  }
+
+  p, li {
+    font-size: 1.1em;
+    line-height: 1.6em;
   }
 
   .section {
