--- a/index.html
+++ b/index.html
@@ -1,132 +1,143 @@
----
-layout: default
-title: Tiago Belintani
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tiago Belintani</title>
 
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
 
-  body {
-    font-family: 'Fira Code', monospace;
-    color: #222;
-    background: url('assets/images/background.png') no-repeat center center fixed;
-    background-size: cover;
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 30px;
-  }
+  <style>
+    body {
+      font-family: 'Fira Code', monospace;
+      background: url('assets/images/background.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #222;
+      margin: 0 auto;
+      padding: 40px 20px;
+      max-width: 1100px;
+      line-height: 1.8;
+    }
 
-  h1, h2, h3 {
-    color: #000;
-    text-align: center;
-  }
+    h1 {
+      font-size: 4.2em;
+      text-align: center;
+      margin-bottom: 10px;
+    }
 
-  h1 {
-    font-size: 4.4em;
-    margin-bottom: 0;
-  }
+    h3 {
+      font-size: 2.3em;
+      font-weight: 400;
+      text-align: center;
+      margin-top: 0;
+    }
 
-  h3 {
-    font-size: 2.4em;
-    font-weight: 400;
-    margin-top: 0;
-  }
+    h2 {
+      font-size: 2em;
+      margin-top: 30px;
+      margin-bottom: 10px;
+    }
 
-  p, li {
-    font-size: 1.1em;
-    line-height: 1.6em;
-  }
+    p, li {
+      font-size: 1.25em;
+    }
 
-  .section {
-    background-color: rgba(255, 255, 255, 0.95);
-    padding: 25px;
-    margin: 30px 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
+    .section {
+      background-color: rgba(255, 255, 255, 0.92);
+      padding: 30px;
+      margin: 40px 0;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+    }
 
-  .photo {
-    text-align: center;
-    margin-bottom: 30px;
-  }
+    .photo {
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-  .photo img {
-    width: 240px;
-    border-radius: 12px;
-    border: 4px solid #eee;
-  }
+    .photo img {
+      width: 250px;
+      border-radius: 12px;
+      border: 4px solid #f0f0f0;
+    }
 
-  a {
-    color: #000;
-    text-decoration: none;
-    font-weight: 500;
-  }
+    a {
+      color: #000;
+      text-decoration: none;
+      font-weight: 600;
+    }
 
-  a:hover {
-    text-decoration: underline;
-  }
+    a:hover {
+      text-decoration: underline;
+    }
 
-  .image-gallery {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 40px;
-  }
+    .image-gallery {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 25px;
+      margin-top: 40px;
+    }
 
-  .image-gallery img {
-    width: 300px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  }
-</style>
+    .image-gallery img {
+      width: 320px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    }
+  </style>
+</head>
+<body>
 
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
+  <div class="photo">
+    <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
+  </div>
 
-<h1>Tiago Belintani</h1>
-<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
+  <h1>Tiago Belintani</h1>
+  <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
-I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
-My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
+  <p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
+  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
+  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
 
-<div class="section">
-  <h2>🧬 Work</h2>
-  <ul>
-    <li>Researcher in Evolutionary Biology</li>
-    <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
-  </ul>
-</div>
+  <div class="section">
+    <h2>🧬 Work</h2>
+    <ul>
+      <li>Researcher in Evolutionary Biology</li>
+      <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
+    </ul>
+  </div>
 
-<div class="section">
-  <h2>🎓 Education</h2>
-  <ul>
-    <li>Universidade Estadual de Campinas – IB/Unicamp</li>
-    <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
-    <li>University of Idaho – UIDAHO</li>
-    <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
-  </ul>
-</div>
+  <div class="section">
+    <h2>🎓 Education</h2>
+    <ul>
+      <li>Universidade Estadual de Campinas – IB/Unicamp</li>
+      <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
+      <li>University of Idaho – UIDAHO</li>
+      <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
+    </ul>
+  </div>
 
-<div class="section">
-  <h2>📬 Contact Me</h2>
-  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-</div>
+  <div class="section">
+    <h2>📬 Contact Me</h2>
+    <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
+  </div>
 
-<div class="section">
-  <h2>📄 Academic Profiles</h2>
-  <ul>
-    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
-    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
-    <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
-  </ul>
-</div>
+  <div class="section">
+    <h2>📄 Academic Profiles</h2>
+    <ul>
+      <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
+      <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
+      <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
+    </ul>
+  </div>
 
-<div class="image-gallery">
-  <img src="assets/images/imagem1.jpg" alt="DNA theme">
-  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
-</div>
+  <div class="image-gallery">
+    <img src="assets/images/imagem1.jpg" alt="DNA theme">
+    <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+  </div>
+
+</body>
+</html>
+
 
