--- a/index.html
+++ b/index.html
@@ -20,30 +20,31 @@
     }
 
     h1 {
-      font-size: 4.2em;
+      font-size: 4.5em;
       text-align: center;
       margin-bottom: 10px;
     }
 
     h3 {
-      font-size: 2.3em;
+      font-size: 2.5em;
       font-weight: 400;
       text-align: center;
       margin-top: 0;
     }
 
     h2 {
-      font-size: 2em;
-      margin-top: 30px;
-      margin-bottom: 10px;
+      font-size: 2.2em;
+      margin-top: 40px;
+      margin-bottom: 20px;
+      text-align: center;
     }
 
     p, li {
-      font-size: 1.25em;
+      font-size: 1.3em;
     }
 
     .section {
-      background-color: rgba(255, 255, 255, 0.92);
+      background-color: rgba(255, 255, 255, 0.95);
       padding: 30px;
       margin: 40px 0;
       border-radius: 12px;
@@ -52,13 +53,14 @@
 
     .photo {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 50px;
     }
 
     .photo img {
-      width: 250px;
-      border-radius: 12px;
+      width: 300px;
+      border-radius: 14px;
       border: 4px solid #f0f0f0;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
     }
 
     a {
@@ -75,14 +77,15 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 25px;
-      margin-top: 40px;
+      gap: 30px;
+      margin-top: 60px;
+      margin-bottom: 40px;
     }
 
     .image-gallery img {
-      width: 320px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      width: 420px;
+      border-radius: 14px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.15);
     }
   </style>
 </head>
@@ -132,6 +135,7 @@
     </ul>
   </div>
 
+  <h2>🖼️ Visual Themes</h2>
   <div class="image-gallery">
     <img src="assets/images/imagem1.jpg" alt="DNA theme">
     <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
