--- a/index.html
+++ b/index.html
@@ -1,198 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tiago Belintani</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
 
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
-  
-  <!-- Swiper for carousel -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
+  body {
+    font-family: 'Fira Code', monospace;
+    color: #222;
+    background: url('assets/images/tiago.png') no-repeat center center fixed;
+    background-size: cover;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 40px 20px;
+  }
 
-    body {
-      font-family: 'Fira Code', monospace;
-      background: url('assets/images/background.png') no-repeat center center fixed;
-      background-size: cover;
-      color: #222;
-      margin: 0 auto;
-      padding: 40px 20px;
-      max-width: 1100px;
-    }
-
-    h1 {
-      font-size: 2.8em;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-
-    h3 {
-      font-size: 1.4em;
-      font-weight: 400;
-      text-align: center;
-      margin-top: 0;
-    }
-
-    h2 {
-      font-size: 1.6em;
-      margin-top: 40px;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    p, li {
-      font-size: 1em;
-      line-height: 1.6;
-    }
-
-    .section {
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 25px;
-      margin: 30px 0;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-    }
-
-    .photo {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-
-    .photo img {
-      width: 380px;
-      border-radius: 14px;
-      border: 4px solid #f0f0f0;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    }
-
-    .cv-button {
-      display: block;
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .cv-button a {
-      display: inline-block;
-      background-color: #444;
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: background 0.3s;
-    }
-
-    .cv-button a:hover {
-      background-color: #000;
-    }
-
-    a {
-      color: #000;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* Carousel */
-    .swiper {
-      width: 100%;
-      padding-top: 40px;
-      padding-bottom: 40px;
-    }
-
-    .swiper-slide {
-      text-align: center;
-    }
-
-    .swiper-slide img {
-      width: 500px;
-      max-width: 90%;
-      border-radius: 14px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.15);
-    }
-  </style>
-</head>
-<body>
-
-  <div class="photo">
-    <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-  </div>
-
-  <h1>Tiago Belintani</h1>
-  <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
-
-  <p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
-  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
-  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
-
-  <div class="cv-button">
-    <a href="assets/CV_TiagoBelintani.pdf" download>📄 Download My CV</a>
-  </div>
-
-  <div class="section">
-    <h2>🧬 Work</h2>
-    <ul>
-      <li>Researcher in Evolutionary Biology</li>
-      <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>🎓 Education</h2>
-    <ul>
-      <li>Universidade Estadual de Campinas – IB/Unicamp</li>
-      <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
-      <li>University of Idaho – UIDAHO</li>
-      <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>📬 Contact Me</h2>
-    <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-  </div>
-
-  <div class="section">
-    <h2>📄 Academic Profiles</h2>
-    <ul>
-      <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
-      <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
-      <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
-    </ul>
-  </div>
-
-  <h2>🖼️ Research Themes</h2>
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="assets/images/imagem1.jpg" alt="DNA theme" /></div>
-      <div class="swiper-slide"><img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug" /></div>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper(".mySwiper", {
-      loop: true,
-      spaceBetween: 40,
-      autoplay: {
-        delay: 5000,
-        disableOnInteraction: false,
-      },
-      centeredSlides: true,
-    });
-  </script>
-</body>
-</html>
-
+  /* ...restante permanece igual... */
+</style>
 
 
 
