--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Tiago Belintani
+---
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
 
@@ -11,8 +16,117 @@
     padding: 40px 20px;
   }
 
-  /* ...restante permanece igual... */
+  h1, h2, h3 {
+    color: #000;
+    text-align: center;
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 3em;
+    margin-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 1.8em;
+    font-weight: 400;
+    margin-top: 5px;
+  }
+
+  p, li {
+    font-size: 1.05em;
+    line-height: 1.6em;
+  }
+
+  .section {
+    background-color: rgba(255, 255, 255, 0.95);
+    padding: 25px;
+    margin: 30px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+
+  .photo {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .photo img {
+    width: 320px;
+    border-radius: 12px;
+    border: 4px solid #eee;
+  }
+
+  a {
+    color: #000;
+    text-decoration: none;
+    font-weight: 500;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  .image-gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 50px;
+  }
+
+  .image-gallery img {
+    width: 380px;
+    border-radius: 12px;
+    box-shadow: 0 0 12px rgba(0,0,0,0.2);
+  }
 </style>
 
+<div class="photo">
+  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
+</div>
 
+<h1>Tiago Belintani</h1>
+<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
+<p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
+I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
+My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
+
+<div class="section">
+  <h2>🧬 Work</h2>
+  <ul>
+    <li>Researcher in Evolutionary Biology</li>
+    <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>🎓 Education</h2>
+  <ul>
+    <li>Universidade Estadual de Campinas – IB/Unicamp</li>
+    <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
+    <li>University of Idaho – UIDAHO</li>
+    <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>📬 Contact Me</h2>
+  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
+</div>
+
+<div class="section">
+  <h2>📄 Academic Profiles</h2>
+  <ul>
+    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
+    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
+    <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
+  </ul>
+</div>
+
+<div class="image-gallery">
+  <img src="assets/images/imagem1.jpg" alt="DNA theme">
+  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+</div>
