--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@ title: Tiago Belintani
     color: #222;
     background: url('assets/images/tiago.png') no-repeat center center fixed;
     background-size: cover;
-    max-width: 1100px;
+    max-width: 960px;
     margin: 0 auto;
-    padding: 40px 20px;
+    padding: 30px;
   }
 
   h1, h2, h3 {
     color: #000;
     text-align: center;
-    margin: 0;
   }
 
   h1 {
     font-size: 3em;
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
 
   h3 {
-    font-size: 1.8em;
+    font-size: 1.6em;
     font-weight: 400;
-    margin-top: 5px;
+    margin-top: 0;
   }
 
   p, li {
-    font-size: 1.05em;
-    line-height: 1.6em;
+    font-size: 1em;
+    line-height: 1.5em;
   }
 
   .section {
@@ -48,12 +47,12 @@ title: Tiago Belintani
 
   .photo {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 
   .photo img {
     width: 320px;
-    border-radius: 12px;
+    border-radius: 14px;
     border: 4px solid #eee;
   }
 
@@ -69,16 +68,22 @@ title: Tiago Belintani
 
   .image-gallery {
     display: flex;
+    overflow-x: auto;
+    padding: 20px 0;
+    gap: 20px;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin-top: 50px;
   }
 
   .image-gallery img {
     width: 380px;
+    flex-shrink: 0;
     border-radius: 12px;
     box-shadow: 0 0 12px rgba(0,0,0,0.2);
+  }
+
+  .cv-link {
+    text-align: center;
+    margin: 30px 0;
   }
 </style>
 
@@ -126,7 +131,12 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
   </ul>
 </div>
 
+<div class="cv-link">
+  <h2>📁 <a href="assets/docs/TiagoBelintani_CV.pdf" target="_blank">Access My CV</a></h2>
+</div>
+
 <div class="image-gallery">
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
+
