--- a/index.html
+++ b/index.html
@@ -8,46 +8,44 @@ title: Tiago Belintani
 
   body {
     font-family: 'Fira Code', monospace;
-    color: #222;
+    color: #e0e0e0;
     background: url('assets/images/tiago.png') no-repeat center center fixed;
     background-size: cover;
+    background-color: #1e1e1e;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
-    background-color: rgba(255,255,255,0.85); /* leve clareamento sobre o fundo */
   }
 
   h1, h2, h3 {
-    color: #000;
+    color: #10a37f;
     text-align: center;
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 3.2em;
     margin-bottom: 0;
   }
 
   h3 {
-    font-size: 1.6em;
+    font-size: 1.8em;
     font-weight: 400;
     margin-top: 0;
+    color: #e0e0e0;
   }
 
   p, li {
     font-size: 1em;
-    line-height: 1.5em;
+    line-height: 1.6em;
+    color: #e0e0e0;
   }
 
-  .section, .intro-box {
-    background-color: rgba(255, 255, 255, 0.95);
+  .section, .intro-box, .title-box {
+    background-color: rgba(42, 42, 42, 0.95);
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
-
-  .intro-box {
-    background-color: rgba(248, 248, 248, 0.95);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   }
 
   .photo {
@@ -58,11 +56,11 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #eee;
+    border: 4px solid #444;
   }
 
   a {
-    color: #000;
+    color: #10a37f;
     text-decoration: none;
     font-weight: 500;
   }
@@ -83,7 +81,7 @@ title: Tiago Belintani
     width: 420px;
     flex-shrink: 0;
     border-radius: 12px;
-    box-shadow: 0 0 12px rgba(0,0,0,0.2);
+    box-shadow: 0 0 14px rgba(0,0,0,0.4);
   }
 
   .cv-link {
@@ -92,7 +90,7 @@ title: Tiago Belintani
   }
 
   .cv-link img {
-    width: 36px;
+    width: 38px;
     vertical-align: middle;
     margin-right: 10px;
   }
@@ -102,8 +100,10 @@ title: Tiago Belintani
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
 
-<h1>Tiago Belintani</h1>
-<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
+<div class="title-box">
+  <h1>Tiago Belintani</h1>
+  <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
+</div>
 
 <div class="intro-box">
   <p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
