--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'Fira Code', monospace;
     color: #e0e0e0;
-    background: url('assets/images/tiago.png') no-repeat center center fixed;
+    background: url('assets/images/tiago_black.png') no-repeat center center fixed;
     background-size: cover;
     background-color: #1e1e1e;
     max-width: 960px;
