--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@ title: Tiago Belintani
 
   body {
     font-family: 'Fira Code', monospace;
-    color: #e0e0e0;
-    background: url('assets/images/tiago_black.png') no-repeat center center fixed;
+    color: #222;
+    background: url('assets/images/light-editorial.png') repeat center center fixed;
     background-size: cover;
-    background-color: #1e1e1e;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
   }
 
   h1, h2, h3 {
-    color: #10a37f;
     text-align: center;
+    color: #111;
   }
 
   h1 {
-    font-size: 3.2em;
-    margin-bottom: 0;
+    font-size: 3em;
+    margin-bottom: 0.2em;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 10px;
   }
 
   h3 {
-    font-size: 1.8em;
+    font-size: 1.6em;
     font-weight: 400;
     margin-top: 0;
-    color: #e0e0e0;
+    padding: 5px;
+    background-color: rgba(245, 245, 245, 0.85);
+    border-radius: 8px;
   }
 
   p, li {
     font-size: 1em;
     line-height: 1.6em;
-    color: #e0e0e0;
   }
 
-  .section, .intro-box, .title-box {
-    background-color: rgba(42, 42, 42, 0.95);
+  .section {
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
   }
 
   .photo {
@@ -56,11 +59,11 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #444;
+    border: 4px solid #ddd;
   }
 
   a {
-    color: #10a37f;
+    color: #333;
     text-decoration: none;
     font-weight: 500;
   }
@@ -81,18 +84,22 @@ title: Tiago Belintani
     width: 420px;
     flex-shrink: 0;
     border-radius: 12px;
-    box-shadow: 0 0 14px rgba(0,0,0,0.4);
+    box-shadow: 0 0 12px rgba(0,0,0,0.15);
   }
 
   .cv-link {
     text-align: center;
-    margin: 30px 0;
+    margin: 40px 0;
   }
 
   .cv-link img {
-    width: 38px;
+    width: 50px;
     vertical-align: middle;
     margin-right: 10px;
+  }
+
+  .cv-link a {
+    font-size: 1.2em;
   }
 </style>
 
@@ -100,16 +107,12 @@ title: Tiago Belintani
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
 
-<div class="title-box">
-  <h1>Tiago Belintani</h1>
-  <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
-</div>
+<h1>Tiago Belintani</h1>
+<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<div class="intro-box">
-  <p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
-  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
-  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
-</div>
+<p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
+I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
+My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
 
 <div class="section">
   <h2>🧬 Work</h2>
@@ -146,7 +149,7 @@ title: Tiago Belintani
 
 <div class="cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-    <img src="assets/images/cv_icon.png" alt="CV Icon">Access My CV
+    <img src="assets/images/folder-icon.png" alt="CV icon">Access My CV
   </a>
 </div>
 
@@ -154,4 +157,5 @@ title: Tiago Belintani
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
+
 
