--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'Fira Code', monospace;
     color: #222;
-    background: url('assets/images/20220715_102402.png') repeat center center fixed;
+    background: url('assets/images/20220715_102402.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
