--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
 
 <div class="cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-    <img src="assets/images/folder-icon.png" alt="CV icon">Access My CV
+    <img src="assets/images/3846805.png" alt="CV icon">Access My CV
   </a>
 </div>
 
