--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@ title: Tiago Belintani
   }
 
   .cv-link {
+    background-color: rgba(255, 255, 240, 0.9); /* tom claro suave */
     text-align: center;
-    margin: 40px 0;
+    padding: 30px;
+    margin: 50px 0;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   }
 
   .cv-link img {
@@ -99,10 +103,11 @@ title: Tiago Belintani
   }
 
   .cv-link a {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
 </style>
 
+<!-- Foto principal -->
 <div class="photo">
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
@@ -114,6 +119,7 @@ title: Tiago Belintani
 I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
 My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
 
+<!-- Seções principais -->
 <div class="section">
   <h2>🧬 Work</h2>
   <ul>
@@ -147,15 +153,15 @@ My background is in Animal Biology, with strong emphasis on bioinformatics, evol
   </ul>
 </div>
 
+<!-- Seção CV com fundo personalizado -->
 <div class="cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
     <img src="assets/images/3846805.png" alt="CV icon">Access My CV
   </a>
 </div>
 
+<!-- Galeria de imagens -->
 <div class="image-gallery">
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
-
-
