--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<p>Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.  
-I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).  
-My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.</p>
+<p class="white-box">
+  Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
+  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
+  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
+</p>
 
 <!-- Seções principais -->
 <div class="section">
