--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Tiago Belintani
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
   }
 
@@ -34,7 +34,7 @@ title: Tiago Belintani
     font-weight: 400;
     margin-top: 0;
     padding: 5px;
-    background-color: rgba(245, 245, 245, 0.85);
+    background-color: rgba(255, 255, 255, 0.85);
     border-radius: 8px;
   }
 
@@ -44,7 +44,7 @@ title: Tiago Belintani
   }
 
   .section {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.96);
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
@@ -88,7 +88,7 @@ title: Tiago Belintani
   }
 
   .cv-link {
-    background-color: rgba(255, 255, 240, 0.9); /* tom claro suave */
+    background-color: rgba(255, 255, 255, 0.95);
     text-align: center;
     padding: 30px;
     margin: 50px 0;
@@ -105,6 +105,14 @@ title: Tiago Belintani
   .cv-link a {
     font-size: 1.3em;
   }
+
+  .white-box {
+    background-color: rgba(255, 255, 255, 0.95);
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px 0;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  }
 </style>
 
 <!-- Foto principal -->
@@ -115,6 +123,7 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
+<!-- Parágrafo introdutório com fundo branco -->
 <p class="white-box">
   Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
   I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
@@ -155,7 +164,7 @@ title: Tiago Belintani
   </ul>
 </div>
 
-<!-- Seção CV com fundo personalizado -->
+<!-- Seção CV com fundo translúcido -->
 <div class="cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
     <img src="assets/images/3846805.png" alt="CV icon">Access My CV
