--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
+<!-- Foto principal movida para baixo -->
+<div class="photo">
+  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
+</div>
+
+
 <!-- Parágrafo introdutório com fundo branco -->
 <p class="white-box">
   Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
