--- a/index.html
+++ b/index.html
@@ -115,19 +115,14 @@ title: Tiago Belintani
   }
 </style>
 
-<!-- Foto principal -->
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
-
+<!-- Título e subtítulo -->
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<!-- Foto principal movida para baixo -->
+<!-- Foto principal (movida para abaixo do título) -->
 <div class="photo">
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
-
 
 <!-- Parágrafo introdutório com fundo branco -->
 <p class="white-box">
@@ -182,3 +177,4 @@ title: Tiago Belintani
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
+
