--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@ title: Tiago Belintani
 
   body {
     font-family: 'Fira Code', monospace;
-    color: #222;
+    color: #808080; /* Silver */
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
+    background-color: #191919; /* Black fallback */
   }
 
   h1, h2, h3 {
     text-align: center;
-    color: #111;
+    color: #F1B300; /* Pride Gold */
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.92); /* White w/ opacity */
     border-radius: 10px;
   }
 
@@ -41,6 +42,7 @@ title: Tiago Belintani
   p, li {
     font-size: 1em;
     line-height: 1.6em;
+    color: #808080; /* Silver */
   }
 
   .section {
@@ -59,11 +61,11 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #ddd;
+    border: 4px solid #F1B300; /* Pride Gold */
   }
 
   a {
-    color: #333;
+    color: #F1B300; /* Pride Gold */
     text-decoration: none;
     font-weight: 500;
   }
@@ -104,6 +106,7 @@ title: Tiago Belintani
 
   .cv-link a {
     font-size: 1.3em;
+    color: #F1B300;
   }
 
   .white-box {
@@ -115,23 +118,19 @@ title: Tiago Belintani
   }
 </style>
 
-<!-- Título e subtítulo -->
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<!-- Foto principal (movida para abaixo do título) -->
 <div class="photo">
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
 
-<!-- Parágrafo introdutório com fundo branco -->
 <p class="white-box">
   Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
   I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
   My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
 </p>
 
-<!-- Seções principais -->
 <div class="section">
   <h2>🧬 Work</h2>
   <ul>
@@ -165,14 +164,12 @@ title: Tiago Belintani
   </ul>
 </div>
 
-<!-- Seção CV com fundo translúcido -->
 <div class="cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
     <img src="assets/images/3846805.png" alt="CV icon">Access My CV
   </a>
 </div>
 
-<!-- Galeria de imagens -->
 <div class="image-gallery">
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
