--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Tiago Belintani
   }
 
   .section {
-    background-color: rgba(255, 255, 255, 0.96);
+    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
@@ -90,7 +90,7 @@ title: Tiago Belintani
   }
 
   .cv-link {
-    background-color: rgba(255, 255, 255, 0.95);
+    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
     text-align: center;
     padding: 30px;
     margin: 50px 0;
@@ -110,7 +110,7 @@ title: Tiago Belintani
   }
 
   .white-box {
-    background-color: rgba(255, 255, 255, 0.95);
+    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
@@ -174,4 +174,3 @@ title: Tiago Belintani
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
-
