--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@ title: Tiago Belintani
 
   body {
     font-family: 'Fira Code', monospace;
-    color: #808080; /* Silver */
+    color: #504843; /* Texto principal */
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
-    background-color: #191919; /* Black fallback */
+    background-color: #ffffff;
   }
 
   h1, h2, h3 {
     text-align: center;
-    color: #F1B300; /* Pride Gold */
+    color: #8FD694; /* Verde claro destaque */
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.92); /* White w/ opacity */
+    background-color: rgba(255, 255, 255, 0.92);
     border-radius: 10px;
   }
 
@@ -42,15 +42,47 @@ title: Tiago Belintani
   p, li {
     font-size: 1em;
     line-height: 1.6em;
-    color: #808080; /* Silver */
+    color: #FFFFFF;
   }
 
   .section {
-    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
+    background-color: #504843; /* Fundo escuro das caixas */
+    color: #FFFFFF;
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  }
+
+  .white-box {
+    background-color: #504843; /* Mesmo fundo escuro */
+    color: #FFFFFF;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px 0;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  }
+
+  .cv-link {
+    background-color: #504843; /* Fundo escuro */
+    color: #FFFFFF;
+    text-align: center;
+    padding: 30px;
+    margin: 50px 0;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  }
+
+  .cv-link a {
+    font-size: 1.3em;
+    color: #8FD694; /* Link em verde claro para contraste */
+    text-decoration: none;
+  }
+
+  .cv-link img {
+    width: 50px;
+    vertical-align: middle;
+    margin-right: 10px;
   }
 
   .photo {
@@ -61,11 +93,11 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #F1B300; /* Pride Gold */
+    border: 4px solid #8FD694; /* Moldura verde clara */
   }
 
   a {
-    color: #F1B300; /* Pride Gold */
+    color: #6F8F72; /* Verde escuro elegante */
     text-decoration: none;
     font-weight: 500;
   }
@@ -87,34 +119,6 @@ title: Tiago Belintani
     flex-shrink: 0;
     border-radius: 12px;
     box-shadow: 0 0 12px rgba(0,0,0,0.15);
-  }
-
-  .cv-link {
-    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
-    text-align: center;
-    padding: 30px;
-    margin: 50px 0;
-    border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
-
-  .cv-link img {
-    width: 50px;
-    vertical-align: middle;
-    margin-right: 10px;
-  }
-
-  .cv-link a {
-    font-size: 1.3em;
-    color: #F1B300;
-  }
-
-  .white-box {
-    background: linear-gradient(135deg, rgba(241, 179, 0, 0.2), rgba(255, 215, 100, 0.1)); /* Metallic Gold */
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px 0;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
   }
 </style>
 
@@ -174,3 +178,5 @@ title: Tiago Belintani
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
+
+ 
