--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Tiago Belintani
 
   body {
     font-family: 'Fira Code', monospace;
-    color: #504843; /* Texto principal */
+    color: #504843; /* Texto padrão */
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
@@ -19,14 +19,15 @@ title: Tiago Belintani
 
   h1, h2, h3 {
     text-align: center;
-    color: #8FD694; /* Verde claro destaque */
+    color: #8FD694; /* Verde claro */
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.92);
+    background-color: #504843; /* Fundo escuro */
+    color: #8FD694;
     border-radius: 10px;
   }
 
@@ -35,18 +36,19 @@ title: Tiago Belintani
     font-weight: 400;
     margin-top: 0;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: #504843; /* Fundo escuro */
+    color: #8FD694;
     border-radius: 8px;
   }
 
   p, li {
     font-size: 1em;
     line-height: 1.6em;
-    color: #FFFFFF;
+    color: #FFFFFF; /* Texto branco dentro das caixas escuras */
   }
 
   .section {
-    background-color: #504843; /* Fundo escuro das caixas */
+    background-color: #504843; /* Fundo escuro */
     color: #FFFFFF;
     padding: 25px;
     margin: 30px 0;
@@ -55,7 +57,7 @@ title: Tiago Belintani
   }
 
   .white-box {
-    background-color: #504843; /* Mesmo fundo escuro */
+    background-color: #504843; /* Fundo escuro */
     color: #FFFFFF;
     padding: 20px;
     border-radius: 10px;
@@ -75,7 +77,7 @@ title: Tiago Belintani
 
   .cv-link a {
     font-size: 1.3em;
-    color: #8FD694; /* Link em verde claro para contraste */
+    color: #8FD694;
     text-decoration: none;
   }
 
@@ -93,11 +95,11 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #8FD694; /* Moldura verde clara */
+    border: 4px solid #8FD694; /* Moldura verde claro */
   }
 
   a {
-    color: #6F8F72; /* Verde escuro elegante */
+    color: #8FD694; /* Verde claro nos links */
     text-decoration: none;
     font-weight: 500;
   }
@@ -178,5 +180,3 @@ title: Tiago Belintani
   <img src="assets/images/imagem1.jpg" alt="DNA theme">
   <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
-
- 
