--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@ title: Tiago Belintani
 ---
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@400;700&display=swap');
 
   body {
-    font-family: 'Fira Code', monospace;
-    color: #504843; /* Texto padrão */
+    font-family: 'Open Sans', sans-serif;
+    color: #FFFFFF;
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
-    background-color: #ffffff;
+    background-color: #191919;
   }
 
   h1, h2, h3 {
     text-align: center;
-    color: #8FD694; /* Verde claro */
+    color: #FFFFFF;
+    font-family: 'Roboto', sans-serif;
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: #504843; /* Fundo escuro */
-    color: #8FD694;
+    background-color: #504843;
     border-radius: 10px;
   }
 
@@ -36,19 +36,18 @@ title: Tiago Belintani
     font-weight: 400;
     margin-top: 0;
     padding: 5px;
-    background-color: #504843; /* Fundo escuro */
-    color: #8FD694;
+    background-color: #504843;
     border-radius: 8px;
   }
 
   p, li {
     font-size: 1em;
     line-height: 1.6em;
-    color: #FFFFFF; /* Texto branco dentro das caixas escuras */
+    color: #FFFFFF;
   }
 
   .section {
-    background-color: #504843; /* Fundo escuro */
+    background-color: #504843;
     color: #FFFFFF;
     padding: 25px;
     margin: 30px 0;
@@ -57,7 +56,7 @@ title: Tiago Belintani
   }
 
   .white-box {
-    background-color: #504843; /* Fundo escuro */
+    background-color: #504843;
     color: #FFFFFF;
     padding: 20px;
     border-radius: 10px;
@@ -66,7 +65,7 @@ title: Tiago Belintani
   }
 
   .cv-link {
-    background-color: #504843; /* Fundo escuro */
+    background-color: #504843;
     color: #FFFFFF;
     text-align: center;
     padding: 30px;
@@ -77,7 +76,7 @@ title: Tiago Belintani
 
   .cv-link a {
     font-size: 1.3em;
-    color: #8FD694;
+    color: #FFFFFF;
     text-decoration: none;
   }
 
@@ -95,13 +94,13 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border-radius: 14px;
-    border: 4px solid #8FD694; /* Moldura verde claro */
+    border: 4px solid #FFFFFF;
   }
 
   a {
-    color: #8FD694; /* Verde claro nos links */
+    color: #FFFFFF;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   a:hover {
