--- a/index.html
+++ b/index.html
@@ -48,30 +48,24 @@ title: Tiago Belintani
 
   .section {
     background-color: #504843;
-    color: #FFFFFF;
     padding: 25px;
     margin: 30px 0;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   }
 
   .white-box {
     background-color: #504843;
-    color: #FFFFFF;
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
   }
 
   .cv-link {
     background-color: #504843;
-    color: #FFFFFF;
     text-align: center;
     padding: 30px;
     margin: 50px 0;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
   }
 
   .cv-link a {
@@ -93,8 +87,9 @@ title: Tiago Belintani
 
   .photo img {
     width: 320px;
-    border-radius: 14px;
-    border: 4px solid #FFFFFF;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
   }
 
   a {
@@ -118,8 +113,9 @@ title: Tiago Belintani
   .image-gallery img {
     width: 420px;
     flex-shrink: 0;
-    border-radius: 12px;
-    box-shadow: 0 0 12px rgba(0,0,0,0.15);
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
   }
 </style>
 
