--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@ title: Tiago Belintani
 ---
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@400;700&display=swap');
+  /* Fontes personalizadas */
+  @font-face {
+    font-family: 'Seattle';
+    src: url('assets/fonts/Seattle.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Aslang';
+    src: url('assets/fonts/Aslang.otf') format('opentype');
+  }
+
+  @font-face {
+    font-family: 'Barry';
+    src: url('assets/fonts/Barry.ttf') format('truetype');
+  }
 
   body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Aslang', serif;
     color: #FFFFFF;
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
@@ -20,7 +34,7 @@ title: Tiago Belintani
   h1, h2, h3 {
     text-align: center;
     color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Seattle', sans-serif;
   }
 
   h1 {
@@ -66,6 +80,7 @@ title: Tiago Belintani
     padding: 30px;
     margin: 50px 0;
     border-radius: 12px;
+    font-family: 'Barry', cursive;
   }
 
   .cv-link a {
@@ -87,8 +102,8 @@ title: Tiago Belintani
 
   .photo img {
     width: 320px;
-    border-radius: 0;
     border: none;
+    border-radius: 0;
     box-shadow: none;
   }
 
