--- a/index.html
+++ b/index.html
@@ -4,24 +4,11 @@ title: Tiago Belintani
 ---
 
 <style>
-  /* Fontes personalizadas */
-  @font-face {
-    font-family: 'Seattle';
-    src: url('assets/fonts/Seattle.ttf') format('truetype');
-  }
-
-  @font-face {
-    font-family: 'Aslang';
-    src: url('assets/fonts/Aslang.otf') format('opentype');
-  }
-
-  @font-face {
-    font-family: 'Barry';
-    src: url('assets/fonts/Barry.ttf') format('truetype');
-  }
+  /* Importação das fontes do Google Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap');
 
   body {
-    font-family: 'Aslang', serif;
+    font-family: 'Open Sans', sans-serif;
     color: #FFFFFF;
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
@@ -34,7 +21,7 @@ title: Tiago Belintani
   h1, h2, h3 {
     text-align: center;
     color: #FFFFFF;
-    font-family: 'Seattle', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
 
   h1 {
@@ -47,7 +34,7 @@ title: Tiago Belintani
 
   h3 {
     font-size: 1.6em;
-    font-weight: 400;
+    font-weight: 700;
     margin-top: 0;
     padding: 5px;
     background-color: #504843;
@@ -80,7 +67,6 @@ title: Tiago Belintani
     padding: 30px;
     margin: 50px 0;
     border-radius: 12px;
-    font-family: 'Barry', cursive;
   }
 
   .cv-link a {
