--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
----
-layout: default
-title: Tiago Belintani
----
-
 <style>
-  /* Importação das fontes do Google Fonts */
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap');
+  /* Fontes modernas via Google Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=DM+Serif+Display&display=swap');
 
   body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Inter', sans-serif;
     color: #FFFFFF;
     background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
@@ -21,48 +16,49 @@ title: Tiago Belintani
   h1, h2, h3 {
     text-align: center;
     color: #FFFFFF;
-    font-family: 'Playfair Display', serif;
+    font-family: 'DM Serif Display', serif;
+    letter-spacing: 0.5px;
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: #504843;
-    border-radius: 10px;
+    background-color: #2f2f2f;
+    border-radius: 12px;
   }
 
   h3 {
-    font-size: 1.6em;
-    font-weight: 700;
+    font-size: 1.7em;
+    font-weight: 400;
     margin-top: 0;
-    padding: 5px;
-    background-color: #504843;
+    padding: 6px;
+    background-color: #2f2f2f;
     border-radius: 8px;
   }
 
   p, li {
-    font-size: 1em;
-    line-height: 1.6em;
+    font-size: 1.05em;
+    line-height: 1.8em;
     color: #FFFFFF;
   }
 
   .section {
-    background-color: #504843;
+    background-color: #2f2f2f;
     padding: 25px;
     margin: 30px 0;
-    border-radius: 10px;
+    border-radius: 12px;
   }
 
   .white-box {
-    background-color: #504843;
+    background-color: #2f2f2f;
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
   }
 
   .cv-link {
-    background-color: #504843;
+    background-color: #2f2f2f;
     text-align: center;
     padding: 30px;
     margin: 50px 0;
@@ -70,15 +66,16 @@ title: Tiago Belintani
   }
 
   .cv-link a {
-    font-size: 1.3em;
+    font-size: 1.2em;
     color: #FFFFFF;
     text-decoration: none;
+    font-weight: 600;
   }
 
   .cv-link img {
-    width: 50px;
+    width: 48px;
     vertical-align: middle;
-    margin-right: 10px;
+    margin-right: 12px;
   }
 
   .photo {
@@ -89,12 +86,12 @@ title: Tiago Belintani
   .photo img {
     width: 320px;
     border: none;
-    border-radius: 0;
-    box-shadow: none;
+    border-radius: 6px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
 
   a {
-    color: #FFFFFF;
+    color: #FFD700;
     text-decoration: none;
     font-weight: 600;
   }
@@ -114,65 +111,7 @@ title: Tiago Belintani
   .image-gallery img {
     width: 420px;
     flex-shrink: 0;
-    border: none;
-    border-radius: 0;
-    box-shadow: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
   }
 </style>
-
-<h1>Tiago Belintani</h1>
-<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
-
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
-
-<p class="white-box">
-  Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
-  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
-  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
-</p>
-
-<div class="section">
-  <h2>🧬 Work</h2>
-  <ul>
-    <li>Researcher in Evolutionary Biology</li>
-    <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>🎓 Education</h2>
-  <ul>
-    <li>Universidade Estadual de Campinas – IB/Unicamp</li>
-    <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
-    <li>University of Idaho – UIDAHO</li>
-    <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>📬 Contact Me</h2>
-  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-</div>
-
-<div class="section">
-  <h2>📄 Academic Profiles</h2>
-  <ul>
-    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
-    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
-    <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
-  </ul>
-</div>
-
-<div class="cv-link">
-  <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-    <img src="assets/images/3846805.png" alt="CV icon">Access My CV
-  </a>
-</div>
-
-<div class="image-gallery">
-  <img src="assets/images/imagem1.jpg" alt="DNA theme">
-  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
-</div>
